# perplex_city

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  notes.txt  pyproject.toml
app/: dependencies.py  main.py
app/api/routes/: search.py
app/evaluation/: ragas_eval.py
app/evaluation/dataset/: changer.py  questions.json
app/models/: request.py  response.py
app/pipeline/: chunker.py  deduplicator.py  embedder.py  generator.py  query_expander.py  rank.py  reranker.py  simlar_match.py  web_search.py
app/test_notebooks/: dataset_prep.json  new_prep_ragas.json  open.ipynb  ragaa.json  ragas_eval.json  ragas_prep.json  test.ipynb
