[project]
name = "perplex-city"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "asyncddgs>=0.1.0a1",
    "datasets>=4.8.5",
    "ddgs>=9.14.2",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.13.2",
    "faiss-gpu-cu12>=1.14.1.post1",
    "fastapi[standard]>=0.136.0",
    "google>=3.0.0",
    "google-genai>=1.75.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "pandas>=3.0.2",
    "pre-commit>=4.6.0",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "rerankers>=0.10.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.7.0",
    "trafilatura>=2.0.0",
    "transformers>=5.5.4",
    "url-normalize>=3.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "S101"]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu118" }]
torchvision = [{ index = "pytorch-cu118" }]
torchaudio = [{ index = "pytorch-cu118" }]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
plugins = ["pydantic.mypy"]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]
